<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="5dp">

    <TextView
        android:id="@+id/lblNameEquipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp"
        android:text="@string/default_text_name_equipment"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/default_text_description_equipment"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/lblUsage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/default_text_usage_equipment"
        android:textSize="18sp" />
</LinearLayout>